Create full infrastructure on AWS with Terraform/3-security-group.tf
resource "aws_security_group" "sg_custom" {
    vpc_id = aws_vpc.custom_vpc.id

    egress  {  // defines outbound traffic
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {   // defines inbound traffic
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {  // defines inbound traffic
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {   // defines inbound traffic
        from_port = 6443
        to_port = 6443
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {   // defines inbound traffic
        from_port = 2379
        to_port = 2379
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    tags = {
        "Name" = "sg_custom"
        "Description" = "sg_custom"
    }
  
}
